Fixes tooltip not showing

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -262,6 +262,10 @@ th {
     box-shadow:0 1px 8px rgba(0,0,0,0.5);
 }
 
+.tooltip.show {
+    opacity: 1;
+}
+
 .tooltip i {
     position:absolute;
     top:30%;
